src/objects/Datacredito__c.object
<CustomObject>
    <fields>
        <fullName>Articulo__c</fullName>
        <label>Artículo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Documento__c</fullName>
        <label>Estado Documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_y_Hora_Consulta__c</fullName>
        <label>Fecha y Hora Consulta</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Asesor__c</fullName>
        <label>Nombre Asesor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Cliente__c</fullName>
        <label>Nombre Cliente</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Documento__c</fullName>
        <label>Numero Documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntaje__c</fullName>
        <label>Puntaje</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rango_Edad__c</fullName>
        <label>Rango Edad</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Documento__c</fullName>
        <label>Tipo Documento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Deuda__c</fullName>
        <label>Total Porcentaje Deuda</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Part__c</fullName>
        <label>Total Porcentaje Part</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Actual__c</fullName>
        <label>Total Saldo Actual</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Mora__c</fullName>
        <label>Total Saldo Mora</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Cuota__c</fullName>
        <label>Total Valor Cuota</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Inicial__c</fullName>
        <label>Total Valor Inicial</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Datacredito</label>
    <nameField>
        <displayFormat>DD-{000000}</displayFormat>
        <label>Id Datacredito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Datacreditos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>